@startuml class diagram
title Quiz de Noël — Diagramme de classes (domaine + API)

' === Types & Domaines ===
enum LevelType {
  facile
  intermédiaire
  avancé
}

class Day {
  +day_date: Date <<PK>>
}

class Game {
  +game_id: Bigint <<PK>>
  +nickname: "String[12]"
  +level: LevelType
  +points: Smallint
  +total_time: Integer
  +created_at: Timestamp
  +day_date: Date <<FK>>
}

' Association (composition logique) : un jour agrège des parties
Day "1" o-- "0..*" Game : DAY_RANKING\n(FK, ON DELETE CASCADE)

' === Couche applicative (API / Service) ===
class ScoreService {
  +saveScore(nickname, level, points, total_time): Game
  +topPoints(date_jour, limit=100): List<Game>
  +topTime(date_jour, limit=100): List<Game>
}

class ScoresAPI {
  +postScore(body): 201
  +getLeaderboard(type, limit=100): 200
  +getHealth(): 200
}

note right of ScoresAPI
POST /api/scores
GET  /api/leaderboard?type=points|time&limit=100
GET  /api/health
end note

ScoresAPI ..> ScoreService
ScoreService ..> Game
ScoreService ..> Day

' === Contraintes (notes) ===
note right of Game
- CHECK points ∈ [0..10]
- CHECK total_time > 0
- UNIQUE (nickname, day_date)
end note

note left of Day
- Clé logique pour le reset quotidien (UTC+4)
- Indice(s) pour tri des classements
end note
@enduml
